# galluz-language

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  HACKING.md  README.md  build.sh  compile-run.py  create_headers.py  gengrammar.sh  run-examples.sh  shell.nix
cmake/: install-rules.cmake
examples/: arithmetic.glz  comparison.glz  factorial.glz  finput.glz  funcs_with_args.glz  global_and_local_vars.glz  modules.glz  simple.glz  simple_if_else.glz  simple_while.glz  structs.glz  vars_change.glz
examples/core/: basicmath.glz
source/: _default.hpp  input_parser.cpp  logger.cpp  logger.hpp  main.cpp  tracelogger.cpp  tracelogger.hpp
source/core/: compiler.hpp  generator_factory.hpp  generator_manager.hpp  glzllvm.hpp  module_manager.hpp  preprocessor.hpp  type_system.hpp  types.hpp
source/generators/: arithmetic_generator.hpp  comparison_generator.hpp  control_flow_generator.hpp  do_generator.hpp  finput_generator.hpp  fractional_generator.hpp  function_call_generator.hpp  function_generator.hpp  import_generator.hpp  list_generator.hpp  module_generator.hpp  moduleuse_generator.hpp  new_generator.hpp  number_generator.hpp  print_generator.hpp  property_generator.hpp  scope_generator.hpp  set_generator.hpp  string_generator.hpp  struct_alloc_generator.hpp  struct_generator.hpp  symbol_generator.hpp  variable_generator.hpp
source/parser/: GalluzGrammar.bnf  GalluzGrammar.h  utils.hpp
